# Game-Engine

./: Cargo.toml  README.md  TODOS.md
docs/: Architecture.md
engine/: Cargo.toml  README.md
engine/src/: application.rs  lib.rs  main.rs
engine/src/core/: app.rs  mod.rs  stack.rs
engine/src/egui/: mod.rs  renderer.rs
engine/src/layers/: layer_stack.rs  mod.rs
engine/src/systems/: layers.rs  mod.rs  stacks.rs  windows.rs
render_api/: Cargo.toml  README.md
